src/gramatica_python.output
Grammar

    0 $accept: codigo $end

    1 codigo: sentencias

    2 sentencias: sentencia
    3           | sentencias sentencia

    4 sentencia: asignacion
    5          | imprimir

    6 asignacion: VARIABLE ASIGNACION expresion

    7 expresion: expresion SUMA tipos
    8          | expresion RESTA tipos
    9          | expresion MULTIPLICACION tipos
   10          | expresion DIVISION tipos
   11          | tipos

   12 tipos: VARIABLE
   13      | NUMERO
   14      | DECIMAL

   15 imprimir: IMPRIMIR PARENTESISIZQ expresion PARENTESISDER


Terminals, with rules where they appear

$end (0) 0
error (256)
SUMA (258) 7
RESTA (259) 8
MULTIPLICACION (260) 9
DIVISION (261) 10
ASIGNACION (262) 6
PARENTESISIZQ (263) 15
PARENTESISDER (264) 15
IMPRIMIR (265) 15
NUMERO (266) 13
DECIMAL (267) 14
VARIABLE (268) 6 12


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
codigo (15)
    on left: 1, on right: 0
sentencias (16)
    on left: 2 3, on right: 1 3
sentencia (17)
    on left: 4 5, on right: 2 3
asignacion (18)
    on left: 6, on right: 4
expresion (19)
    on left: 7 8 9 10 11, on right: 6 7 8 9 10 15
tipos (20)
    on left: 12 13 14, on right: 7 8 9 10 11
imprimir (21)
    on left: 15, on right: 5


state 0

    0 $accept: . codigo $end

    IMPRIMIR  shift, and go to state 1
    VARIABLE  shift, and go to state 2

    codigo      go to state 3
    sentencias  go to state 4
    sentencia   go to state 5
    asignacion  go to state 6
    imprimir    go to state 7


state 1

   15 imprimir: IMPRIMIR . PARENTESISIZQ expresion PARENTESISDER

    PARENTESISIZQ  shift, and go to state 8


state 2

    6 asignacion: VARIABLE . ASIGNACION expresion

    ASIGNACION  shift, and go to state 9


state 3

    0 $accept: codigo . $end

    $end  shift, and go to state 10


state 4

    1 codigo: sentencias .
    3 sentencias: sentencias . sentencia

    IMPRIMIR  shift, and go to state 1
    VARIABLE  shift, and go to state 2

    $default  reduce using rule 1 (codigo)

    sentencia   go to state 11
    asignacion  go to state 6
    imprimir    go to state 7


state 5

    2 sentencias: sentencia .

    $default  reduce using rule 2 (sentencias)


state 6

    4 sentencia: asignacion .

    $default  reduce using rule 4 (sentencia)


state 7

    5 sentencia: imprimir .

    $default  reduce using rule 5 (sentencia)


state 8

   15 imprimir: IMPRIMIR PARENTESISIZQ . expresion PARENTESISDER

    NUMERO    shift, and go to state 12
    DECIMAL   shift, and go to state 13
    VARIABLE  shift, and go to state 14

    expresion  go to state 15
    tipos      go to state 16


state 9

    6 asignacion: VARIABLE ASIGNACION . expresion

    NUMERO    shift, and go to state 12
    DECIMAL   shift, and go to state 13
    VARIABLE  shift, and go to state 14

    expresion  go to state 17
    tipos      go to state 16


state 10

    0 $accept: codigo $end .

    $default  accept


state 11

    3 sentencias: sentencias sentencia .

    $default  reduce using rule 3 (sentencias)


state 12

   13 tipos: NUMERO .

    $default  reduce using rule 13 (tipos)


state 13

   14 tipos: DECIMAL .

    $default  reduce using rule 14 (tipos)


state 14

   12 tipos: VARIABLE .

    $default  reduce using rule 12 (tipos)


state 15

    7 expresion: expresion . SUMA tipos
    8          | expresion . RESTA tipos
    9          | expresion . MULTIPLICACION tipos
   10          | expresion . DIVISION tipos
   15 imprimir: IMPRIMIR PARENTESISIZQ expresion . PARENTESISDER

    SUMA            shift, and go to state 18
    RESTA           shift, and go to state 19
    MULTIPLICACION  shift, and go to state 20
    DIVISION        shift, and go to state 21
    PARENTESISDER   shift, and go to state 22


state 16

   11 expresion: tipos .

    $default  reduce using rule 11 (expresion)


state 17

    6 asignacion: VARIABLE ASIGNACION expresion .
    7 expresion: expresion . SUMA tipos
    8          | expresion . RESTA tipos
    9          | expresion . MULTIPLICACION tipos
   10          | expresion . DIVISION tipos

    SUMA            shift, and go to state 18
    RESTA           shift, and go to state 19
    MULTIPLICACION  shift, and go to state 20
    DIVISION        shift, and go to state 21

    $default  reduce using rule 6 (asignacion)


state 18

    7 expresion: expresion SUMA . tipos

    NUMERO    shift, and go to state 12
    DECIMAL   shift, and go to state 13
    VARIABLE  shift, and go to state 14

    tipos  go to state 23


state 19

    8 expresion: expresion RESTA . tipos

    NUMERO    shift, and go to state 12
    DECIMAL   shift, and go to state 13
    VARIABLE  shift, and go to state 14

    tipos  go to state 24


state 20

    9 expresion: expresion MULTIPLICACION . tipos

    NUMERO    shift, and go to state 12
    DECIMAL   shift, and go to state 13
    VARIABLE  shift, and go to state 14

    tipos  go to state 25


state 21

   10 expresion: expresion DIVISION . tipos

    NUMERO    shift, and go to state 12
    DECIMAL   shift, and go to state 13
    VARIABLE  shift, and go to state 14

    tipos  go to state 26


state 22

   15 imprimir: IMPRIMIR PARENTESISIZQ expresion PARENTESISDER .

    $default  reduce using rule 15 (imprimir)


state 23

    7 expresion: expresion SUMA tipos .

    $default  reduce using rule 7 (expresion)


state 24

    8 expresion: expresion RESTA tipos .

    $default  reduce using rule 8 (expresion)


state 25

    9 expresion: expresion MULTIPLICACION tipos .

    $default  reduce using rule 9 (expresion)


state 26

   10 expresion: expresion DIVISION tipos .

    $default  reduce using rule 10 (expresion)
